--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
-/*CORLORS
+/*COLORS
 
 #1A2026 preto fosco
 #D96C6C rosa pastel
@@ -18,15 +18,17 @@ body{
 header{
     max-width: 100%;
     height: 90vh;
-    background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.100)),url('../images/img_inicial.jpg');
+    background: linear-gradient(rgba(0,0,0,0.0), rgba(0,0,0,0.8)),url('../images/img_inicial.jpg');
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
 
     position: relative;
 }
-nav.navbar{
-    background-color: rgb(36, 36, 36);
+
+.navbar-nav{
+    text-align: center;
+    margin-right: 68%;
 }
 a.navbar-brand{
     height: 80px;
@@ -45,6 +47,9 @@ a.navbar-brand img{
 .container-fluid{
     margin-left: 35%;
 }
+.navbar{
+    background: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.1));
+}
 
 div.carousel-item{
     width: 50%;
@@ -55,8 +60,12 @@ div.carousel-item{
     max-width: 70%;
     max-height: 100%;
     margin-left: 67%;
+    background: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.0));
 }
 
+.accordion{
+    margin-top: 3%;
+}
 .accordion-item{
     background-color: #1A2026;
     color: aliceblue;
@@ -69,7 +78,9 @@ div.carousel-item{
     color: aliceblue;
     font-family: 'Courier New', cursive;
 }
-
+header nav.nav-item a.nav-link :hover{
+    color:#98a6b4;
+}
 .card-body{
     background-color:  rgb(36, 36, 36);
 }
@@ -89,51 +100,64 @@ div.carousel-item{
     color: aliceblue;
     font-family: 'Courier New', cursive;
 }
-.card{
-    margin-left: 1%;
-    height: auto;
-    margin-top: 1%;
-}
 
 #lins{
-    background-color: rgb(145, 144, 144);
+    border-color: rgb(145, 144, 144);
+    padding: 2% 10%;
     height: 7rem;
     border-radius: 100px;
     font-family: 'Courier New', cursive;
-    margin-top: -240px;
-    background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.100));
+    margin-top: 200px;
+    background: linear-gradient(rgba(0,0,0,0.0), rgba(0,0,0,0.4));
     font-size: larger;
-    margin-left: 10%;
+    margin-left: 35%;
 }
 
 footer{
     max-width: 100%;
-    height: 50vh;
+    height: 40vh;
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
     background-color: #1A2026;
+    background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.0));
 
     position: relative;
 }
 #contato{
-    margin-left: 44%;
-    margin-top: 1%;
+    margin-top: 2%;
+    align-items: center;
+}
+.contato{
+    align-items: center;
+    text-align: center;
+    margin-left: 3%;
 }
 h1{
-    margin-left: 27%;
-    margin-top: 5%;
+    margin-top: 3%;
     font-family: 'Courier New', cursive;
     color: aliceblue;
 }
 h4{
-    margin-left: 47%;
     font-family: 'Courier New', cursive;
     color: aliceblue;
 }
 h5{
     margin-top: 4%;
-    margin-left: 42%;
     font-family: 'Courier New', cursive;
     color: aliceblue;
+}
+#btnGH{
+    border-color: rgb(145, 144, 144);
+    font-size: larger;
+    background: linear-gradient(rgba(0,0,0,0.0), rgba(0,0,0,0.4));
+    border-radius: 100px;
+    font-family: 'Courier New', cursive;
+}
+#btnIG{
+    border-color: rgb(145, 144, 144);
+    font-size: larger;
+    background: linear-gradient(rgba(0,0,0,0.0), rgba(0,0,0,0.4));
+    border-radius: 100px;
+    font-family: 'Courier New', cursive;
 }
