--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -14,3 +14,41 @@ background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.3)),url('../images/img
     background-size: cover;
     }
 }
+
+@media screen and (max-width: 1000px){
+    div.carousel-item{
+        width: 50%;
+        height: 40vh;
+        min-height: 100%;
+    }
+    .carousel-item img{
+        max-width: 70%;
+        max-height: 100%;
+        margin-left: 67%;
+    }
+}
+@media screen and (max-width: 600px){
+    #lins{
+        border-color: rgb(145, 144, 144);
+        padding: 2% 10%;
+        height: 7rem;
+        border-radius: 100px;
+        font-family: 'Courier New', cursive;
+        margin-top: 200px;
+        background: linear-gradient(rgba(0,0,0,0.0), rgba(0,0,0,0.4));
+        font-size: larger;
+        margin-left: 30%;
+    }
+}
+@media screen and (max-width: 990px){
+    a.navbar-brand img{
+        max-height: 100%;
+        margin-left: 88%;
+    }
+}
+@media screen and (max-width: 550px){
+    a.navbar-brand img{
+        max-height: 100%;
+        margin-left: 50%;
+    }
+}
